css fixes (overflow on new tab content + style apply/cancel buttons black on hover like other buttons) #166

--- a/app/containers/BrowserTabsContainer/BrowserTabContent.styl
+++ b/app/containers/BrowserTabsContainer/BrowserTabContent.styl
@@ -5,6 +5,7 @@
   flex-direction: column;
   flex: 1;
   outline: none
+  overflow-y: auto
 
   .webview-container
     display: flex
