--- a/app/containers/StackListContainer/StackListLayout.styl
+++ b/app/containers/StackListContainer/StackListLayout.styl
@@ -264,8 +264,14 @@
             flexCenter()
         .confirm-btn
             background: var(--color-blue)
+            &:hover
+                color: var(--color-white)!important
+                background: var(--color-black)!important
         .cancel-btn
             background: var(--color-red)
+            &:hover
+                color: var(--color-white)!important
+                background: var(--color-black)!important
         li:first-of-type
             padding-right: 5px
         @media (max-width: $tablet-break-point)
